intial layout into servicenow instance

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,41 +1,34 @@
+html{
+  --primary: #293e40;
+  --secondary: #5a7f71;
+  font-size: 10px;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li{
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  overflow: hidden;
+  font-size: 1.5rem;
+}
+
 a {
   text-decoration: none;
 }
 
-h1 {
-  font-family: Staatliches;
-  font-size: 120px;
+ul, li {
+  list-style: none;
 }
 
-#category {
-  font-family: Staatliches;
-  font-weight: 500;
-}
-
-#title {
-  letter-spacing: 0.4px;
-  font-size: 22px;
-  font-size: 1.375rem;
-  line-height: 1.13636;
-}
-
-#banner {
-  margin: 20px;
-  height: 800px;
-}
-
-#editor {
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.75;
-}
-
-.uk-navbar-container {
-  background: #fff !important;
-  font-family: Staatliches;
-}
-
-img:hover {
-  opacity: 1;
-  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
+img{
+  max-width: 100%;
 }
